--- a/index.html
+++ b/index.html
@@ -6,42 +6,46 @@
     <title>Document</title>
 </head>
 <body>
-    <header><a href="./index.html">WebStudio</a>
-    <nav>
+    <header>
+        <nav>
+        <a href="./index.html"> WebStudio </a>
+   
         <ul>
-            <li>Studio</li>
-            <li>Portfolio</li>
-            <li>Contracts</li>
+            <li> <a href="./index.html"> Studio </a> </li>
+            <li> <a href="./index.html"> Portfolio </a> </li>
+            <li> <a href="./index.html"> Contracts </a>  </li>
         
         </ul>
     </nav>
     <address>
-        <a href="info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="+110001111111">+11 (000) 111-11-11</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </address>
     </header>
     <main>
-        <section><h1>Effective Solutions
+        <section> 
+            <h1>Effective Solutions
             for Your Business</h1>
         <button type="button">Order Service</button>
     </section>
     <section>
+        <h2>About</h2>
         <ul>
             <li>
-                <h2>Strategy</h2>
+                <h3>Strategy</h3>
                 <p>Our goal is to identify the business
                     problem to walk away with the perfect and creative solution. </p>
             </li>
             <li>
-                   <h2>Punctuality</h2>
+                   <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                    <h2>Diligence</h2>
+                    <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                    <h2>Technologies</h2>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
              </li>
 
