--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li> <a href="./index.html"> Studio </a> </li>
             <li> <a href="./index.html"> Portfolio </a> </li>
-            <li> <a href="./index.html"> Contracts </a>  </li>
+            <li> <a href="./index.html"> Contacts </a>  </li>
         
         </ul>
     </nav>
